--- a/style/mystyle.css
+++ b/style/mystyle.css
@@ -1,32 +1,16 @@
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
-.w3-bar,h1,button {font-family: "Montserrat", sans-serif}
-.fa-anchor,.fa-coffee {font-size:200px}
+/*!
+ * Custom CSS
+ *
+ *
+ */
 
-footer {
-    background-color: #f2f2f2;
-    padding: 25px;
-}
 
-.carousel-inner img {
-    width: 70%; /* Set width to 100% */
-    margin: auto;
-    margin-bottom: 10;
-    min-height:200px;
-}
-
-/* Hide the carousel text when the screen is less than 600 pixels wide */
-@media (max-width: 600px) {
-  .carousel-caption {
-    display: none; 
-  }
-}
-
-.btn-circle {
-  width: 70px;
-  height: 70px;
-  text-align: center;
-  font-size: 40px;
-  line-height: 1.42;
-  border-radius: 50%;
-  border-color: black;
+.carousel-item {
+  height: 100vh;
+  min-height: 300px;
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
